Closed Bug 679262 Opened 14 years ago Closed 14 years ago

Seeking to end of file during loadedmetadata event breaks further playback

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: cajbir, Assigned: cajbir)

References

Details

Attachments

(2 files)

Attached file testcase
In the loadedmetadata event I seek to the duration. An ended event is never raised, and the controls still show the 'pause' icon as if playback is still going. Pressing play/pause does not restart the playback. Steps to reproduce: 1) Load testcase with 'content/media/tests/big.wav' in the local directory. What should happen: 1) The 'Play' icon in the controls should appear. What does happen: 2) The 'Pause' icon remains displayed. Then do: 1) Press Play/pause. What should happen: 1) Playback should start from the beginning What does happen: 1) currentTime stays at the duration and no playback occurs.
Blocks: 648595
Assignee: nobody → chris.double
Attached patch FixSplinter Review
Fix is to raise ended event if we seeked to the end of the file. Test is provided by re-enabling the 'todo' media fragment test that tests this issue.
Attachment #555959 - Flags: review?(chris)
Attachment #555959 - Flags: review?(chris) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: