Bug 679262 - Seeking to end of file during loadedmetadata event breaks further playback - r=cpearce

--HG--
extra : rebase_source : 1ecffe9613128724e38060d44a46a5bdbcc6fb18